--- a/Spacing_blur_BaseColor_controller/index.html
+++ b/Spacing_blur_BaseColor_controller/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Scoped CSS Variables and JS</title>
+		<link rel="stylesheet" href="index.css" />
+		<title>Spacing, blur and base color</title>
 	</head>
 	<body>
 		<h2>Update CSS Variables with <span class="hl">JS</span></h2>
