--- a/Spacing_blur_BaseColor_controller/index.html
+++ b/Spacing_blur_BaseColor_controller/index.html
@@ -6,7 +6,7 @@
 		<title>Spacing, blur and base color</title>
 	</head>
 	<body>
-		<h2>Update CSS Variables with <span class="hl">JS</span></h2>
+		<h2>Update CSS Variables with <span class="h1">JS</span></h2>
 
 		<div class="controls">
 			<label for="spacing">Spacing:</label>
@@ -36,5 +36,7 @@
 		</div>
 
 		<img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
+
+		<script src="index.js"></script>
 	</body>
 </html>
