--- a/Drum_Kit/index.html
+++ b/Drum_Kit/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Drum Kit</title>
 		<link rel="stylesheet" href="index.css" />
+		<link rel="shortcut icon" href="#" />
 	</head>
 	<body>
 		<div class="keys">
