--- a/Sticky_Navbar/index.html
+++ b/Sticky_Navbar/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Sticky Nav</title>
-		<link rel="stylesheet" href="style-START.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<header>
@@ -306,6 +306,6 @@
 			</p>
 		</div>
 
-		<script></script>
+		<script src="index.js"></script>
 	</body>
 </html>
